added the first blog

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+      <h3>My firt website</h3> 
+      <p>my name is saiful, my mother name is nargis,my father name is shah alam</p> 
+    </div>
 </body>
 </html>
