addd the 2nd & 3rd blog

--- a/index2.html
+++ b/index2.html
@@ -11,5 +11,13 @@
       <h3>My firt website</h3> 
       <p>my name is saiful, my mother name is nargis,my father name is shah alam</p> 
     </div>
+    <div>
+      <h3>My secound website</h3> 
+      <p>my name is saiful, my mother name is nargis,my father name is shah alam</p> 
+    </div>
+    <div>
+      <h3>My third website</h3> 
+      <p>my name is saiful, my mother name is nargis,my father name is shah alam</p> 
+    </div>
 </body>
 </html>
